--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -7,9 +7,10 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_topic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="所有收藏"
+        android:text="某个话题"
         tools:layout_editor_absoluteX="164dp"
         tools:layout_editor_absoluteY="16dp"
         tools:ignore="MissingConstraints" />
